# hector-moveit

./: .gitignore  .gitmodules  Development.md  LICENSE  README.md  gazebo_model_downloader.sh
src/hector_models/hector_sensors_description/: CHANGELOG.rst  package.xml
src/hector_models/hector_sensors_description/urdf/: hokuyo_utm30lx.urdf.xacro  realsense_d435_camera.urdf.xacro  ricoh_theta.urdf.xacro
src/hector_models/hector_xacro_tools/: CHANGELOG.rst  package.xml
src/hector_models/hector_xacro_tools/urdf/: joint_macros.urdf.xacro
src/hector_moveit/: CMakeLists.txt  package.xml
src/hector_moveit/Media/models/: apple.dae
src/hector_moveit/config/: fake_controllers.yaml  ompl_planning.yaml  quadrotor.srdf  sensors_kinect.yaml
src/hector_moveit/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  hector_3dnav.launch  move_group.launch  move_hector.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  quadrotor_moveit_controller_manager.launch.xml  quadrotor_moveit_sensor_manager.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
src/hector_moveit/src/: fruit_generator.cc  keyboard_teleop.cpp  move_quadrotor.cpp
src/hector_moveit/worlds/: garden.world
src/hector_moveit_actions/: CMakeLists.txt  package.xml
src/hector_moveit_actions/action/: ExecuteDroneTrajectory.action
src/hector_moveit_actions/src/: trajectory_executer.cpp
src/hector_moveit_config/: .setup_assistant  CMakeLists.txt  _setup_assistant  package.xml
src/hector_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  quadrotor.srdf  sensors_kinect.yaml
src/hector_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  move_hector.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  quadrotor_moveit_controller_manager.launch.xml  quadrotor_moveit_sensor_manager.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
src/hector_moveit_config/src/: gazebo_killer.sh  model_spawner.py  move_quadrotor.cpp
src/hector_moveit_exploration/: CMakeLists.txt  package.xml
src/hector_moveit_exploration/include/: Explorer.h
src/hector_moveit_exploration/launch/: explore.launch
src/hector_moveit_exploration/src/: Explorer.cpp  explorer.cpp  explorer_node.cpp
src/hector_moveit_gazebo/: CMakeLists.txt  package.xml
src/hector_moveit_gazebo/launch/: orchyard_navigation.launch
src/hector_moveit_gazebo_plugins/: CMakeLists.txt  package.xml
src/hector_moveit_gazebo_plugins/src/: fruit_generator.cc
src/hector_moveit_gazebo_worlds/: CMakeLists.txt  package.xml
src/hector_moveit_gazebo_worlds/Media/models/apple_tree/: model.config  model.sdf
src/hector_moveit_gazebo_worlds/Media/models/apple_tree/materials/scripts/: apple_tree.material
src/hector_moveit_gazebo_worlds/Media/models/apple_tree/meshes/: tree.dae
src/hector_moveit_gazebo_worlds/Media/models/custom_ground/: model.config  model.sdf
src/hector_moveit_gazebo_worlds/Media/models/custom_ground/materials/scripts/: custom_ground.material
src/hector_moveit_gazebo_worlds/Media/models/orchard_ground/: model.config  model.sdf
src/hector_moveit_gazebo_worlds/Media/models/orchard_wall/: model.config  model.sdf
src/hector_moveit_gazebo_worlds/worlds/: garden.world  garden2.world
src/hector_moveit_perception/: CMakeLists.txt  package.xml
src/hector_moveit_perception/scripts/: fruit_detector.py
src/hector_moveit_rviz_plugins/: CMakeLists.txt  package.xml  plugin_description.xml
src/hector_moveit_rviz_plugins/src/: orchard_grid_panel.cpp  orchard_grid_panel.h
src/hector_quadrotor-kinetic-devel/hector_quadrotor_demo/launch/: outdoor_flight_gazebo.launch
src/hector_quadrotor-kinetic-devel/hector_quadrotor_description/urdf/: quadrotor_with_kinect.urdf.xacro
src/hector_quadrotor-kinetic-devel/hector_quadrotor_gazebo/launch/: spawn_quadrotor.launch
src/hector_quadrotor-kinetic-devel/hector_sensors_description/urdf/: camera360.urdf.xacro  flir_a35_camera.urdf.xacro  generic_thermal_camera.urdf.xacro  kinect_camera.urdf.xacro  realsense_camera.urdf.xacro  vlp16.urdf.xacro
src/hector_quadrotor/hector_quadrotor_actions/src/: pose_action.cpp  takeoff_action.cpp
src/hector_quadrotor/hector_quadrotor_controllers/src/: attitude_controller.cpp
src/hector_quadrotor/hector_quadrotor_description/urdf/: quadrotor_with_kinect.urdf.xacro
src/hector_quadrotor/hector_quadrotor_gazebo/launch/: spawn_quadrotor.launch  spawn_quadrotor_with_kinect.launch
