<?xml version="1.0"?>
<package format="2">
  <name>hector_moveit_actions</name>
  <version>0.0.0</version>
  <description>The hector_moveit_actions package</description>

  <maintainer email="tahsincankose@gmail.com">Tahsincan Köse</maintainer>
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>actionlib_msgs</depend>
  <depend>roscpp</depend>
  <depend>hector_uav_msgs</depend>
  <exec_depend>message_generation</exec_depend>

  <export>

  </export>
</package>
