<?xml version="1.0"?>
<package format="2">
  <name>hector_moveit_exploration</name>
  <version>0.0.0</version>
  <description>The hector_moveit_exploration package</description>

  <author email="tahsincankose@gmail.com">Tahsincan Köse</author>
  <maintainer email="tahsincankose@gmail.com">Tahsincan Köse</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_msgs</depend>
  <depend>hector_uav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>octomap</depend>
  <depend>hector_moveit_actions</depend>
  <export>

  </export>
</package>
