<?xml version="1.0"?>
<package>
  <name>hector_moveit_gazebo_plugins</name>
  <version>1.0.0</version>
  <description>
    The hector_moveit_gazebo_plugins package.
    This package stores the Gazebo plugins implemented for hector_moveit project.
    Current plugins:
      - Random fruit generation based on Oak Tree Mesh data.
  </description>

  <author email="tahsincankose@gmail.com">Tahsincan Köse</author>
  <maintainer email="tahsincankose@gmail.com">Tahsincan Köse</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  

</package>
