<package>
  <name>hector_moveit_rviz_plugins</name>
  <version>0.1.0</version>
  <description>
     Rviz plugins for hector_moveit project.
  </description>
  <maintainer email="tahsincankose@gmail.com">Tahsincan Köse</maintainer>
  <license>BSD</license>

  <author>Tahsincan Köse</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>libqt5-core</run_depend>
  <run_depend>libqt5-gui</run_depend>
  <run_depend>libqt5-widgets</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <export>
      <rosdoc config="${prefix}/rosdoc.yaml"/>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
